add monitor & config for mobile bert

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,5 +83,8 @@
     },
     "cmake.ignoreCMakeListsMissing": true,
     "editor.formatOnSave": true,
-    "css.format.braceStyle": "expand"
+    "css.format.braceStyle": "expand",
+    "github.copilot.enable": {
+        "yaml": true
+    }
 }
