--- a/config_examples/mobilebert/1_2.yaml
+++ b/config_examples/mobilebert/1_2.yaml
@@ -14,6 +14,7 @@ topology: "HIERARCHICAL"
 hierarchical_config:
   num_levels: 4
   connection_mode: "tree"
+  transmission_mode: "traditional"
   word_bits: 8
   
   level_configs:
@@ -59,7 +60,7 @@ hierarchical_config:
       node_type: "DISTRIBUTOR"
       buffer_size: 0 # 维持您提供的buffer配置
       roles: "ROLE_DISTRIBUTOR"
-      bandwidth: 128
+      bandwidth: 64
       fanouts: 16
       aggregate: true
       routing_patterns:  
@@ -98,7 +99,7 @@ hierarchical_config:
       node_type: "ROLE_BUFFER"
       buffer_size: [384, 32, 32]    
       roles: "ROLE_BUFFER"
-      bandwidth: 8
+      bandwidth: 64
       fanouts: 0
 
 workload:
