--- a/config_examples/vgg16/layer0/0.yaml
+++ b/config_examples/vgg16/layer0/0.yaml
@@ -20,7 +20,7 @@ hierarchical_config:
     # Level 0: DRAM (系统内存)
     - level: 0
       node_type: "DRAM"
-      buffer_size: 37748736
+      buffer_size: 1027604480
       roles: "ROLE_DRAM"
       bandwidth: 512
       fanouts: 1
@@ -34,10 +34,9 @@ hierarchical_config:
 
         OUTPUT:  
           mode: "OUTPUT"  
-          port_groups: [[0]]  
+          port_groups: [[0]] 
 
-    # Level 1: GLB (对应 8x12 中的 "8" 这一维)
-    # 假设该维度为标准的单播分发（因为日志只显示了12那一维的复杂多播）
+    # Level 1: GLB
     - level: 1
       node_type: "GLB"
       buffer_size: 3715000
@@ -48,39 +47,29 @@ hierarchical_config:
       routing_patterns:
         Weights:
           port_groups:
-          - - 0
-            - 1
-            - 2
-            - 3
-          - - 4
-            - 5
-            - 6
-            - 7
+            - [0, 1, 2, 3]
+            - [4, 5, 6, 7]
         Inputs:
           port_groups:
-          - - 0
-            - 4
-          - - 1
-            - 5
-          - - 2
-            - 6
-          - - 3
-            - 7
+            - [0, 4]
+            - [1, 5]
+            - [2, 6]
+            - [3, 7]
         Outputs:
           port_groups:
-          - - 0
-          - - 1
-          - - 2
-          - - 3
-          - - 4
-          - - 5
-          - - 6
-          - - 7
+            - [0]
+            - [1]
+            - [2]
+            - [3]
+            - [4]
+            - [5]
+            - [6]
+            - [7]
 
-    # Level 2: DISTRIBUTOR (对应 8x12 中的 "12" 这一维 - 日志来源层)
+    # Level 2: DISTRIBUTOR
     - level: 2
       node_type: "DISTRIBUTOR"
-      buffer_size: 0 # 维持您提供的buffer配置
+      buffer_size: 0
       roles: "ROLE_DISTRIBUTOR"
       bandwidth: 128
       fanouts: 12
@@ -88,35 +77,29 @@ hierarchical_config:
       routing_patterns:
         Weights:
           port_groups:
-          [[0,1,2,3],[4,5,6,7],[8,9,10,11]]
+            - [0, 1, 2, 3]
+            - [4, 5, 6, 7]
+            - [8, 9, 10, 11]
         Inputs:
           port_groups:
-          - - 0
-          - - 1
-          - - 2
-          - - 3
-          - - 4
-          - - 5
-          - - 6
-          - - 7
-          - - 8
-          - - 9
-          - - 10
-          - - 11
+            - [0]
+            - [1]
+            - [2]
+            - [3]
+            - [4]
+            - [5]
+            - [6]
+            - [7]
+            - [8]
+            - [9]
+            - [10]
+            - [11]
         Outputs:
           port_groups:
-          - - 0
-            - 4
-            - 8
-          - - 1
-            - 5
-            - 9
-          - - 2
-            - 6
-            - 10
-          - - 3
-            - 7
-            - 11
+            - [0, 4, 8]
+            - [1, 5, 9]
+            - [2, 6, 10]
+            - [3, 7, 11]
       
     # Level 3: COMPUTE (PE)
     - level: 3
@@ -125,6 +108,7 @@ hierarchical_config:
       roles: "ROLE_BUFFER"
       bandwidth: 8
       fanouts: 0
+      aggregate: false
 
 workload:
   working_set:
